# agentwatch

./: .env.example  .gitignore  DEMO_SCRIPT.md  Makefile  README.md  director.js  pyproject.toml  render.yaml
agent/: agentwatch_api.py  agentwatch_main.py  agentwatch_ui.py  instrumentation.py
agent/agentwatch_core/: __init__.py  agent.py  phoenix_evals.py  phoenix_summary.py  pricing.py  prompt.py
agent/static/: index.html
