[project]
name = "agentwatch"
version = "0.1.0"
description = "AgentWatch — production monitoring dashboard for AI agents, powered by Google ADK + Arize Phoenix"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "openinference-instrumentation-google-adk>=0.1.11",
    "google-adk>=1.32.0",
    "google-genai>=1.9.0",
    "python-dotenv>=1.0.1",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    # Only the lightweight OTel registration helper is used at runtime
    # (phoenix.otel.register). The full `arize-phoenix` server package pulls in
    # pandas/scipy/scikit-learn/strawberry-graphql and is not needed — every
    # Phoenix data call here is a plain REST request via httpx.
    "arize-phoenix-otel>=0.6",
    "httpx>=0.27",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent/agentwatch_core"]

[project.scripts]
agentwatch = "agentwatch_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
